--- a/package.json
+++ b/package.json
@@ -18,12 +18,18 @@
   "homepage": "https://github.com/Pushkar808/Placement-Cell#readme",
   "dependencies": {
     "cookie-parser": "^1.4.6",
+    "csv": "^6.2.1",
+    "csv-parser": "^3.0.0",
     "ejs": "^3.1.8",
     "ejs-layouts": "^0.0.1",
+    "exceljs": "^4.3.0",
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
+    "fast-csv": "^4.3.6",
+    "json2csv": "^5.0.7",
     "mongoose": "^6.6.5",
     "nodemon": "^2.0.20",
+    "objects-to-csv": "^1.3.6",
     "passport": "^0.6.0"
   }
 }
