--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/Pushkar808/Placement-Cell#readme",
   "dependencies": {
+    "connect-mongo": "^4.6.0",
     "cookie-parser": "^1.4.6",
     "csv": "^6.2.1",
     "csv-parser": "^3.0.0",
@@ -25,11 +26,13 @@
     "exceljs": "^4.3.0",
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
+    "express-session": "^1.17.3",
     "fast-csv": "^4.3.6",
     "json2csv": "^5.0.7",
     "mongoose": "^6.6.5",
     "nodemon": "^2.0.20",
     "objects-to-csv": "^1.3.6",
-    "passport": "^0.6.0"
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0"
   }
 }
